# sunbeam-triage-harness

./: .gitignore  .pre-commit-config.yaml  README.md  analyze.py  config.toml  pyproject.toml  streamlit_app.py
eval/cases/: historical-v1.json
sunbeam_triage/: __init__.py  analyze_rounds.py  arena.py  arena_cli.py  artifact_tools.py  cli.py  config.py  evidence.py  llm.py  probes.py  progress.py  render.py  sessions.py  sosreport_tools.py  swift.py  tool_activity.py  triage_state.py  ui.py  ui_helpers.py
sunbeam_triage/cli/: __init__.py  __main__.py  analyze_rounds.py  arena.py  diagnose.py  evaluate.py  replay.py  scrub_sessions.py
sunbeam_triage/core/: __init__.py  arena.py  artifact_tools.py  baseline.py  config.py  evaluation.py  evidence.py  evidence_model.py  http.py  juju_unit_tools.py  llm.py  llm_exchanges.py  llm_policy.py  llm_prompts.py  llm_schema.py  llm_tool_loop.py  llm_transport.py  markdown_export.py  probes.py  progress.py  redaction.py  render.py  replay.py  report_policy.py  report_validation.py  sessions.py  sosreport_tools.py  step_profile_extractor.py  step_profiles.py  swift.py  tool_activity.py  triage_state.py  ui_sessions.py  use_cases.py
sunbeam_triage/data/: __init__.py  sunbeam_step_profiles.json
sunbeam_triage/ui/: __init__.py  app.py  helpers.py  launcher.py
tests/: test_analyze_rounds.py  test_arena.py  test_arena_cli.py  test_artifact_tools.py  test_baseline.py  test_causal_timeout_corpus.py  test_cli.py  test_config.py  test_evaluation.py  test_evidence.py  test_evidence_model.py  test_llm.py  test_markdown_export.py  test_probes.py  test_progress.py  test_project_metadata.py  test_redaction.py  test_render.py  test_replay.py  test_report_policy.py  test_report_validation.py  test_scrub_sessions.py  test_sessions_v2.py  test_step_profiles.py  test_streamlit_deprecations.py  test_swift.py  test_tool_activity.py  test_triage_state.py  test_ui_helpers.py  test_ui_launcher.py  test_ui_sessions.py  test_use_cases.py
tests/fixtures/: causal_timeout_cases.json
tests/fixtures/sample_uuid/config/: project.yaml
tools/: __init__.py  extract_sunbeam_step_profiles.py
